Add layout tweaks

--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,11 @@
     border: 2px solid grey;
     padding-bottom: 25px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 30px;
 }
 
 .display {
-    margin-top: 25px;
+    margin: 25px;
     height: 100px;
     width: 450px;
     border-radius: 50px;
