--- a/src/App.css
+++ b/src/App.css
@@ -6,45 +6,98 @@
 .container {
     background-color: #c00025;
     width: 100%;
-    max-width: 550px;
+    max-width: 408px;
+    height: 645px;
     border-radius: 15px;
     border: 2px solid grey;
-    padding-bottom: 25px;
     margin: 0 auto;
     padding: 30px;
 }
 
+.logo-container {
+    width: 118px;
+    padding: 4px;
+}
+
+.logo {
+    width: 100%;
+}
+
 .display {
-    margin: 25px;
+    margin-top: 12px;
     height: 100px;
-    width: 450px;
+    width: 389px;
     border-radius: 50px;
     color: white;
     background-color: #322c2d;
     box-shadow: 1px 1px #322c2d;
     display: flex;
     justify-content: flex-end;
-    align-items: flex-end;
-    padding-right: 8%;
+    align-items: center;
+    padding-right: 4%;
     font-size: 5.0rem;
   }
 
 button {
     font-size: 3.5rem;
-    font-weight: bold;
     background: blue;
     color: white;
-    width: 100px;
-    height: 100px;
+    width: 82px;
+    height: 82px;
     border-radius: 50%;
-    margin: 10px;
 }
 
 div.leftCol > div:nth-child(2) > button:nth-child(10) {
-    width: 220px;
+    width: 200px;
     border-radius: 50px;
 }
 
 .App {
     display: flex; 
+    height: 458px;
+    margin-top: 26px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.leftCol {
+    width: 298px;
+}
+
+.leftCol div:first-of-type {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: space-between;
+}
+
+.leftCol div:last-of-type {
+    display: flex;
+    flex-basis: 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 375px;
+    margin-top: 13px;
+}
+
+.rightCol {
+    width: 84px;
+}
+
+.rightCol div {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.operatorButton {
+    background-color: #247193;
+}
+
+.special button {
+    background-color: #225C9E;
+}
+
+.number {
+    background-color: #194379;
 }
