--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,8 @@ button {
     width: 82px;
     height: 82px;
     border-radius: 50%;
+    box-shadow: 0px 5px black;
+    border: none;
 }
 
 div.leftCol > div:nth-child(2) > button:nth-child(10) {
